syntax = "proto3";

// Package notes.v1 содержит API для работы с заметками
package notes.v1;

option go_package = "notes/v1;notesv1";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";

// NotesService предоставляет методы для управления заметками
service NotesService {
  // CreateNote создает новую заметку
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {
    option (google.api.http) = {
      post: "/notes/v1"
      body: "*"
    };
  }
  
  // GetNote возвращает заметку по её UUID
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse) {
    option (google.api.http) = {
      get: "/notes/v1/{id}"
    };
  }
  
  // ListNotes возвращает список всех заметок
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse) {
    option (google.api.http) = {
      get: "/notes/v1"
    };
  }
  
  // UpdateNote обновляет существующую заметку
  rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse) {
    option (google.api.http) = {
      put: "/notes/v1/{id}"
      body: "*"
    };
  }
  
  // DeleteNote удаляет заметку по UUID
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse) {
    option (google.api.http) = {
      delete: "/notes/v1/{id}"
    };
  }
  
  // SubscribeToEvents подписывается на события создания заметок
  rpc SubscribeToEvents(SubscribeToEventsRequest) returns (stream EventResponse);
  
  // UploadMetrics принимает поток метрик и возвращает агрегированную статистику
  rpc UploadMetrics(stream MetricRequest) returns (SummaryResponse);
  
  // Chat - двунаправленный стрим для асинхронного обмена сообщениями
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

// Запрос на создание заметки
message CreateNoteRequest {
  string title = 1 [
    (buf.validate.field).string = {
      min_len: 5,
      max_len: 255
    }
  ];    // Заголовок заметки (обязательное, минимум 5 символов, максимум 255)
  string content = 2 [
    (buf.validate.field).string.min_len = 10
  ];  // Содержание заметки (обязательное, минимум 10 символов)
}

// Ответ с созданной заметкой
message CreateNoteResponse {
  Note note = 1;
}

// Запрос на получение заметки по UUID
message GetNoteRequest {
  string id = 1;  // UUID заметки
}

// Ответ с заметкой
message GetNoteResponse {
  Note note = 1;
}

// Запрос на получение списка заметок
message ListNotesRequest {
  // Пока без фильтров, можно расширить в будущем
}

// Ответ со списком заметок
message ListNotesResponse {
  repeated Note notes = 1;
}

// Запрос на обновление заметки
message UpdateNoteRequest {
  string id = 1;       // UUID заметки
  string title = 2;    // Новый заголовок (опционально)
  string content = 3;  // Новое содержание (опционально)
}

// Ответ с обновленной заметкой
message UpdateNoteResponse {
  Note note = 1;
}

// Запрос на удаление заметки
message DeleteNoteRequest {
  string id = 1;  // UUID заметки
}

// Ответ на удаление заметки
message DeleteNoteResponse {
  // Пустой ответ, успех определяется через gRPC статус
}

// Note представляет заметку
message Note {
  string id = 1;                              // UUID заметки
  string title = 2;                           // Заголовок заметки
  string content = 3;                         // Содержание заметки
  google.protobuf.Timestamp created_at = 4;   // Дата создания
  google.protobuf.Timestamp updated_at = 5;   // Дата последнего обновления
}

// ErrorDetails содержит детальную информацию об ошибке
message ErrorDetails {
  string reason = 1;              // Причина ошибки
  string internal_error_code = 2; // Внутренний код ошибки
  string note_id = 3;             // ID заметки, связанной с ошибкой
}

// Запрос на подписку на события
message SubscribeToEventsRequest {
  // Пустой запрос или можно добавить user_id для фильтрации
}

// Ответ со стримом событий
message EventResponse {
  oneof event {
    // Приветственное сообщение или health-check
    HealthCheck health_check = 1;
    // Событие создания новой заметки
    NoteCreatedEvent note_created = 2;
  }
}

// HealthCheck сообщение для поддержания соединения
message HealthCheck {
  string message = 1;                           // Сообщение health-check
  google.protobuf.Timestamp timestamp = 2;      // Временная метка
}

// Событие создания новой заметки
// Подробности об использовании oneof: см. README.md раздел "NoteCreatedEvent: oneof"
message NoteCreatedEvent {
  oneof payload {
    string note_id = 1;  // ID созданной заметки (легковесный вариант)
    Note note = 2;       // Полная заметка (подробный вариант)
  }
}

// Запрос на загрузку метрики (клиентский стриминг)
message MetricRequest {
  double value = 1;  // Значение метрики
  string name = 2;   // Опционально: название метрики
}

// Ответ со статистикой по метрикам
message SummaryResponse {
  double sum = 1;      // Сумма всех метрик
  double average = 2;  // Среднее значение
  int64 count = 3;     // Количество метрик
}

// Сообщение в чате (bidirectional streaming)
message ChatMessage {
  string correlation_id = 1;  // ID для корреляции запросов и ответов
  oneof content {
    // Обычное текстовое сообщение
    ChatTextMessage text_message = 2;
    // Бизнесовая ошибка (не разрывающая соединение)
    ChatError error = 3;
  }
}

// Текстовое сообщение в чате
message ChatTextMessage {
  string text = 1;                           // Текст сообщения
  google.protobuf.Timestamp timestamp = 2;   // Временная метка сообщения
}

// ChatErrorCode определяет детерминированные коды ошибок для чата
// Подробности: см. README.md раздел "ChatError: использование enum"
enum ChatErrorCode {
  CHAT_ERROR_CODE_UNSPECIFIED = 0;  // Не указан (использовать не рекомендуется)
  CHAT_ERROR_CODE_VALIDATION_ERROR = 1;  // Ошибка валидации сообщения
  CHAT_ERROR_CODE_RATE_LIMIT = 2;   // Превышен лимит запросов
  CHAT_ERROR_CODE_INVALID_MESSAGE = 3;  // Некорректное сообщение
}

// Ошибка в чате (бизнесовая, не разрывающая соединение)
message ChatError {
  ChatErrorCode code = 1;    // Детерминированный код ошибки (enum)
  string message = 2;        // Сообщение об ошибке
  string details = 3;        // Дополнительные детали ошибки
}

