package main

import (
	"context"
	"fmt"
	"log"
	"os"
	"time"

	_ "notes-service/pkg/proto/notes/v1" // –Ø–≤–Ω—ã–π –∏–º–ø–æ—Ä—Ç –¥–ª—è —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏ proto —Ç–∏–ø–æ–≤
	notesv1 "notes-service/pkg/proto/notes/v1"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/metadata"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/proto"
	"google.golang.org/protobuf/types/known/anypb"
)

const (
	defaultAddress = "localhost:50051"
	defaultToken   = "my-secret-token"
)

func main() {
	// –ü–æ–ª—É—á–∞–µ–º –∞–¥—Ä–µ—Å —Å–µ—Ä–≤–µ—Ä–∞ –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π –æ–∫—Ä—É–∂–µ–Ω–∏—è –∏–ª–∏ –∏—Å–ø–æ–ª—å–∑—É–µ–º –∑–Ω–∞—á–µ–Ω–∏–µ –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	address := os.Getenv("SERVER_ADDRESS")
	if address == "" {
		address = defaultAddress
	}

	// –ü–æ–ª—É—á–∞–µ–º —Ç–æ–∫–µ–Ω –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏–∏ –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π –æ–∫—Ä—É–∂–µ–Ω–∏—è –∏–ª–∏ –∏—Å–ø–æ–ª—å–∑—É–µ–º –∑–Ω–∞—á–µ–Ω–∏–µ –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	token := os.Getenv("AUTH_TOKEN")
	if token == "" {
		token = defaultToken
	}

	log.Printf("Connecting to gRPC server at %s...", address)

	// –°–æ–∑–¥–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å —Å–µ—Ä–≤–µ—Ä–æ–º
	conn, err := grpc.NewClient(
		address,
		grpc.WithTransportCredentials(insecure.NewCredentials()), // –î–ª—è plaintext —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è
	)
	if err != nil {
		log.Fatalf("Failed to create client: %v", err)
	}
	defer conn.Close()

	log.Println("Connected successfully!")

	// –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç –¥–ª—è NotesService
	client := notesv1.NewNotesServiceClient(conn)

	// –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–∫—Å—Ç —Å –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–º–∏ –¥–ª—è –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏–∏
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// –î–æ–±–∞–≤–ª—è–µ–º –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ —Å —Ç–æ–∫–µ–Ω–æ–º –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏–∏
	ctx = metadata.AppendToOutgoingContext(ctx, "authorization", fmt.Sprintf("Bearer %s", token))

	// –í—ã–±–∏—Ä–∞–µ–º, –∫–∞–∫–æ–π —Ç–µ—Å—Ç –∑–∞–ø—É—Å—Ç–∏—Ç—å —á–µ—Ä–µ–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é –æ–∫—Ä—É–∂–µ–Ω–∏—è –∏–ª–∏ –∞—Ä–≥—É–º–µ–Ω—Ç
	testType := os.Getenv("TEST_TYPE")
	if testType == "" && len(os.Args) > 1 {
		testType = os.Args[1]
	}

	switch testType {
	case "streaming", "stream":
		// –¢–µ—Å—Ç–∏—Ä—É–µ–º server-side streaming
		testSubscribeToEvents(ctx, client)
	case "upload", "metrics", "client-streaming":
		// –¢–µ—Å—Ç–∏—Ä—É–µ–º client-side streaming - –∑–∞–≥—Ä—É–∑–∫—É –º–µ—Ç—Ä–∏–∫
		testUploadMetrics(ctx, client)
	case "upload-empty", "metrics-empty":
		// –¢–µ—Å—Ç–∏—Ä—É–µ–º client-side streaming —Å –ø—É—Å—Ç—ã–º —Å—Ç—Ä–∏–º–æ–º
		testUploadMetricsEmpty(ctx, client)
	case "chat", "bidirectional", "bidi":
		// –¢–µ—Å—Ç–∏—Ä—É–µ–º bidirectional streaming - –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω—ã–π —á–∞—Ç
		testChat(ctx, client)
	case "error":
		// –¢–µ—Å—Ç–∏—Ä—É–µ–º –æ–±—Ä–∞–±–æ—Ç–∫—É –¥–µ—Ç–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω–Ω—ã—Ö –æ—à–∏–±–æ–∫
		testErrorHandling(ctx, client)
	case "success":
		// –¢–µ—Å—Ç–∏—Ä—É–µ–º —É—Å–ø–µ—à–Ω—ã–π –∑–∞–ø—Ä–æ—Å
		testSuccessfulRequest(ctx, client)
	default:
		// –ü–æ —É–º–æ–ª—á–∞–Ω–∏—é —Ç–µ—Å—Ç–∏—Ä—É–µ–º streaming
		log.Println("No TEST_TYPE specified, testing streaming by default")
		log.Println("Available test types: streaming, upload/metrics/client-streaming, chat/bidirectional/bidi, error, success")
		log.Println("Usage: TEST_TYPE=streaming go run . OR go run . streaming")
		testSubscribeToEvents(ctx, client)
	}
}

// testErrorHandling —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç –æ–±—Ä–∞–±–æ—Ç–∫—É –¥–µ—Ç–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω–Ω—ã—Ö –æ—à–∏–±–æ–∫
func testErrorHandling(ctx context.Context, client notesv1.NotesServiceClient) {
	log.Println("\n=== Testing Rich Error Handling ===")

	// –ü—ã—Ç–∞–µ–º—Å—è –ø–æ–ª—É—á–∏—Ç—å –Ω–µ—Å—É—â–µ—Å—Ç–≤—É—é—â—É—é –∑–∞–º–µ—Ç–∫—É
	nonExistentID := "non-existent-id-12345"
	log.Printf("Attempting to get note with ID: %s", nonExistentID)

	resp, err := client.GetNote(ctx, &notesv1.GetNoteRequest{
		Id: nonExistentID,
	})

	if err != nil {
		// –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –æ—à–∏–±–∫—É –≤ gRPC —Å—Ç–∞—Ç—É—Å
		st := status.Convert(err)

		log.Printf("\n‚ùå Error occurred:")
		log.Printf("  Status Code: %s", st.Code().String())
		log.Printf("  Status Message: %s", st.Message())

		// –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫–æ–¥ –æ—à–∏–±–∫–∏
		if st.Code() == codes.NotFound {
			log.Println("\n‚úÖ Correctly received NotFound status")

			// –ò–∑–≤–ª–µ–∫–∞–µ–º Details –∏–∑ –æ—à–∏–±–∫–∏
			details := st.Details()
			log.Printf("\nüìã Error Details (count: %d):", len(details))

			if len(details) == 0 {
				log.Println("  ‚ö†Ô∏è  No details found in error")
				log.Printf("  Full status: %+v", st)
				// –ü–æ–ø—Ä–æ–±—É–µ–º –∏–∑–≤–ª–µ—á—å Details —á–µ—Ä–µ–∑ anypb
				log.Println("\n  Trying to extract details using anypb...")
				// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ Details –≤ proto —Ñ–æ—Ä–º–∞—Ç–µ
				if st.Proto() != nil && len(st.Proto().Details) > 0 {
					log.Printf("  Found %d proto details\n", len(st.Proto().Details))
					for i, detail := range st.Proto().Details {
						log.Printf("    Detail #%d: TypeURL=%s\n", i+1, detail.TypeUrl)
						// –ü–æ–ø—Ä–æ–±—É–µ–º —Ä–∞—Å–ø–∞–∫–æ–≤–∞—Ç—å –∫–∞–∫ ErrorDetails
						if detail.TypeUrl == "type.googleapis.com/notes.v1.ErrorDetails" ||
							detail.TypeUrl == "/notes.v1.ErrorDetails" {
							var errorDetails notesv1.ErrorDetails
							opts := proto.UnmarshalOptions{}
							if err := anypb.UnmarshalTo(detail, &errorDetails, opts); err == nil {
								log.Println("  ‚úÖ Successfully extracted ErrorDetails from anypb:")
								fmt.Printf("    üìù Error reason: %s\n", errorDetails.Reason)
								if errorDetails.NoteId != "" {
									fmt.Printf("    üÜî Note ID: %s\n", errorDetails.NoteId)
								}
								if errorDetails.InternalErrorCode != "" {
									fmt.Printf("    üî¢ Internal Error Code: %s\n", errorDetails.InternalErrorCode)
								}
							} else {
								log.Printf("    Failed to unmarshal: %v", err)
							}
						}
					}
				}
			} else {
				for i, detail := range details {
					log.Printf("\n  Detail #%d:", i+1)
					log.Printf("    Type: %T", detail)
					log.Printf("    Value: %+v", detail)

					// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ç–∏–ø –¥–µ—Ç–∞–ª–∏
					switch t := detail.(type) {
					case *notesv1.ErrorDetails:
						log.Printf("    Type: ErrorDetails")
						log.Printf("    Reason: %s", t.Reason)
						if t.NoteId != "" {
							log.Printf("    Note ID: %s", t.NoteId)
						}
						if t.InternalErrorCode != "" {
							log.Printf("    Internal Error Code: %s", t.InternalErrorCode)
						}

						// –í—ã–≤–æ–¥–∏–º –ø–æ–ª–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é
						log.Println("\n  ‚úÖ Successfully extracted ErrorDetails:")
						fmt.Printf("    üìù Error reason: %s\n", t.Reason)
						if t.NoteId != "" {
							fmt.Printf("    üÜî Note ID: %s\n", t.NoteId)
						}
						if t.InternalErrorCode != "" {
							fmt.Printf("    üî¢ Internal Error Code: %s\n", t.InternalErrorCode)
						}
					default:
						log.Printf("    ‚ö†Ô∏è  Unknown type: %T", t)
						log.Printf("    Raw value: %+v", t)
					}
				}
			}
		} else {
			log.Printf("\n‚ö†Ô∏è  Unexpected status code: %s", st.Code().String())
		}
	} else {
		log.Printf("\n‚úÖ Note found (unexpected!): %+v", resp)
	}
}

// testSuccessfulRequest –¥–µ–º–æ–Ω—Å—Ç—Ä–∏—Ä—É–µ—Ç —É—Å–ø–µ—à–Ω—ã–π –∑–∞–ø—Ä–æ—Å
func testSuccessfulRequest(ctx context.Context, client notesv1.NotesServiceClient) {
	log.Println("\n=== Testing Successful Request ===")

	// –°–Ω–∞—á–∞–ª–∞ —Å–æ–∑–¥–∞–µ–º –∑–∞–º–µ—Ç–∫—É
	createResp, err := client.CreateNote(ctx, &notesv1.CreateNoteRequest{
		Title:   "Test Note Title",
		Content: "This is a test note content with enough characters",
	})
	if err != nil {
		log.Printf("Failed to create note: %v", err)
		return
	}

	log.Printf("Created note with ID: %s", createResp.Note.Id)

	// –¢–µ–ø–µ—Ä—å –ø–æ–ª—É—á–∞–µ–º —Å–æ–∑–¥–∞–Ω–Ω—É—é –∑–∞–º–µ—Ç–∫—É
	getResp, err := client.GetNote(ctx, &notesv1.GetNoteRequest{
		Id: createResp.Note.Id,
	})
	if err != nil {
		log.Printf("Failed to get note: %v", err)
		return
	}

	log.Printf("Successfully retrieved note:")
	log.Printf("  ID: %s", getResp.Note.Id)
	log.Printf("  Title: %s", getResp.Note.Title)
	log.Printf("  Content: %s", getResp.Note.Content)
}
