package main

import (
	"context"
	"fmt"
	"io"
	"log"
	"sync"
	"time"

	notesv1 "notes-service/pkg/proto/notes/v1"

	"google.golang.org/protobuf/types/known/timestamppb"
)

// testSubscribeToEvents —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç server-side streaming - –ø–æ–¥–ø–∏—Å–∫—É –Ω–∞ —Å–æ–±—ã—Ç–∏—è
func testSubscribeToEvents(ctx context.Context, client notesv1.NotesServiceClient) {
	log.Println("\n=== Testing Server-Side Streaming: SubscribeToEvents ===")
	log.Println("Subscribing to events...")

	// –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–∫—Å—Ç —Å —É–≤–µ–ª–∏—á–µ–Ω–Ω—ã–º —Ç–∞–π–º–∞—É—Ç–æ–º –¥–ª—è –¥–ª–∏—Ç–µ–ª—å–Ω–æ–≥–æ —Å—Ç—Ä–∏–º–∞
	streamCtx, cancel := context.WithTimeout(ctx, 5*time.Minute)
	defer cancel()

	// –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏—è
	stream, err := client.SubscribeToEvents(streamCtx, &notesv1.SubscribeToEventsRequest{})
	if err != nil {
		log.Fatalf("Failed to subscribe: %v", err)
	}

	log.Println("‚úÖ Successfully subscribed to events stream")
	log.Println("Waiting for events...")

	eventCount := 0
	healthCheckCount := 0
	noteCreatedCount := 0

	// –ß–∏—Ç–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏—è –∏–∑ —Å—Ç—Ä–∏–º–∞
	for {
		resp, err := stream.Recv()
		if err == io.EOF {
			log.Println("\nüì° Stream closed by server (EOF)")
			break
		}
		if err != nil {
			log.Fatalf("Error receiving event: %v", err)
		}

		eventCount++

		// –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —Ä–∞–∑–Ω—ã–µ —Ç–∏–ø—ã —Å–æ–±—ã—Ç–∏–π
		switch event := resp.Event.(type) {
		case *notesv1.EventResponse_HealthCheck:
			healthCheckCount++
			if healthCheckCount == 1 {
				// –ü–µ—Ä–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ - –ø—Ä–∏–≤–µ—Ç—Å—Ç–≤–µ–Ω–Ω–æ–µ
				log.Printf("\n‚úÖ Received welcome message: %s", event.HealthCheck.Message)
				if event.HealthCheck.Timestamp != nil {
					log.Printf("   Timestamp: %v", event.HealthCheck.Timestamp.AsTime())
				}
			} else {
				// –ü–æ—Å–ª–µ–¥—É—é—â–∏–µ - –ø–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–∏–µ health-check
				log.Printf("üíì Health check #%d: %s", healthCheckCount-1, event.HealthCheck.Message)
			}

		case *notesv1.EventResponse_NoteCreated:
			noteCreatedCount++
			log.Printf("\nüéâ New note created event #%d:", noteCreatedCount)
			log.Printf("   Note ID: %s", event.NoteCreated.NoteId)
			if event.NoteCreated.Note != nil {
				log.Printf("   Title: %s", event.NoteCreated.Note.Title)
				log.Printf("   Content: %s", event.NoteCreated.Note.Content)
				if event.NoteCreated.Note.CreatedAt != nil {
					log.Printf("   Created at: %v", event.NoteCreated.Note.CreatedAt.AsTime())
				}
			}

		default:
			log.Printf("‚ö†Ô∏è  Unknown event type: %T", event)
		}
	}

	log.Printf("\n=== Stream Statistics ===")
	log.Printf("Total events received: %d", eventCount)
	log.Printf("Health checks: %d", healthCheckCount)
	log.Printf("Note created events: %d", noteCreatedCount)
}

// testUploadMetrics —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç client-side streaming - –∑–∞–≥—Ä—É–∑–∫—É –º–µ—Ç—Ä–∏–∫
func testUploadMetrics(ctx context.Context, client notesv1.NotesServiceClient) {
	log.Println("\n=== Testing Client-Side Streaming: UploadMetrics ===")
	log.Println("Uploading metrics...")

	// –°–æ–∑–¥–∞–µ–º —Å—Ç—Ä–∏–º –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –º–µ—Ç—Ä–∏–∫
	stream, err := client.UploadMetrics(ctx)
	if err != nil {
		log.Fatalf("Failed to create stream: %v", err)
	}

	log.Println("‚úÖ Successfully created upload stream")

	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –Ω–µ—Å–∫–æ–ª—å–∫–æ –º–µ—Ç—Ä–∏–∫
	metrics := []float64{10.5, 20.3, 15.7, 30.2, 25.1}
	for i, value := range metrics {
		metric := &notesv1.MetricRequest{
			Value: value,
			Name:  fmt.Sprintf("metric_%d", i+1),
		}

		if err := stream.Send(metric); err != nil {
			log.Fatalf("Failed to send metric: %v", err)
		}

		log.Printf("üì§ Sent metric: %s = %.2f", metric.Name, metric.Value)

		// –ò–º–∏—Ç–∞—Ü–∏—è –∑–∞–¥–µ—Ä–∂–∫–∏ –º–µ–∂–¥—É –æ—Ç–ø—Ä–∞–≤–∫–∞–º–∏
		time.Sleep(500 * time.Millisecond)
	}

	log.Println("\n‚úÖ Finished sending all metrics")

	// –ó–∞–≤–µ—Ä—à–∞–µ–º –æ—Ç–ø—Ä–∞–≤–∫—É –∏ –ø–æ–ª—É—á–∞–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç
	summary, err := stream.CloseAndRecv()
	if err != nil {
		log.Fatalf("Failed to receive summary: %v", err)
	}

	log.Printf("\n‚úÖ Summary received:")
	log.Printf("   Sum:     %.2f", summary.Sum)
	log.Printf("   Average: %.2f", summary.Average)
	log.Printf("   Count:   %d", summary.Count)

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ—Å—Ç—å –≤—ã—á–∏—Å–ª–µ–Ω–∏–π
	expectedSum := 10.5 + 20.3 + 15.7 + 30.2 + 25.1
	expectedAverage := expectedSum / float64(len(metrics))
	if summary.Count == int64(len(metrics)) &&
		summary.Sum == expectedSum &&
		summary.Average == expectedAverage {
		log.Println("\n‚úÖ All calculations are correct!")
	} else {
		log.Printf("\n‚ö†Ô∏è  Calculation mismatch: expected sum=%.2f, got %.2f", expectedSum, summary.Sum)
	}
}

// testUploadMetricsEmpty —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç client-side streaming —Å –ø—É—Å—Ç—ã–º —Å—Ç—Ä–∏–º–æ–º
func testUploadMetricsEmpty(ctx context.Context, client notesv1.NotesServiceClient) {
	log.Println("\n=== Testing Client-Side Streaming: UploadMetrics (Empty Stream) ===")
	log.Println("Testing empty metrics stream...")

	// –°–æ–∑–¥–∞–µ–º —Å—Ç—Ä–∏–º –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –º–µ—Ç—Ä–∏–∫
	stream, err := client.UploadMetrics(ctx)
	if err != nil {
		log.Fatalf("Failed to create stream: %v", err)
	}

	log.Println("‚úÖ Successfully created upload stream")
	log.Println("üì§ Not sending any metrics...")

	// –ù–µ–º–µ–¥–ª–µ–Ω–Ω–æ –∑–∞–≤–µ—Ä—à–∞–µ–º –æ—Ç–ø—Ä–∞–≤–∫—É –±–µ–∑ –æ—Ç–ø—Ä–∞–≤–∫–∏ –º–µ—Ç—Ä–∏–∫
	summary, err := stream.CloseAndRecv()
	if err != nil {
		log.Fatalf("Failed to receive summary: %v", err)
	}

	log.Printf("\n‚úÖ Summary received for empty stream:")
	log.Printf("   Sum:     %.2f", summary.Sum)
	log.Printf("   Average: %.2f", summary.Average)
	log.Printf("   Count:   %d", summary.Count)

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ –¥–ª—è –ø—É—Å—Ç–æ–≥–æ —Å—Ç—Ä–∏–º–∞ count = 0
	if summary.Count == 0 && summary.Sum == 0 && summary.Average == 0 {
		log.Println("\n‚úÖ Empty stream handled correctly!")
	} else {
		log.Printf("\n‚ö†Ô∏è  Unexpected values for empty stream")
	}
}

// testChat —Ç–µ—Å—Ç–∏—Ä—É–µ—Ç bidirectional streaming - –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω—ã–π —á–∞—Ç
func testChat(ctx context.Context, client notesv1.NotesServiceClient) {
	log.Println("\n=== Testing Bidirectional Streaming: Chat ===")
	log.Println("Starting chat...")

	// –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–∫—Å—Ç —Å —É–≤–µ–ª–∏—á–µ–Ω–Ω—ã–º —Ç–∞–π–º–∞—É—Ç–æ–º –¥–ª—è –¥–ª–∏—Ç–µ–ª—å–Ω–æ–≥–æ —á–∞—Ç–∞
	chatCtx, cancel := context.WithTimeout(ctx, 2*time.Minute)
	defer cancel()

	// –°–æ–∑–¥–∞–µ–º bidirectional —Å—Ç—Ä–∏–º
	stream, err := client.Chat(chatCtx)
	if err != nil {
		log.Fatalf("Failed to create chat stream: %v", err)
	}

	log.Println("‚úÖ Successfully created chat stream")

	errChan := make(chan error, 2)
	var wg sync.WaitGroup

	receivedCount := 0
	sentCount := 0
	acknowledgedCount := 0
	notificationCount := 0

	// –ì–æ—Ä—É—Ç–∏–Ω–∞ –¥–ª—è —á—Ç–µ–Ω–∏—è —Å–æ–æ–±—â–µ–Ω–∏–π –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞
	wg.Add(1)
	go func() {
		defer wg.Done()
		for {
			msg, err := stream.Recv()
			if err == io.EOF {
				log.Println("üì° Server closed stream (EOF)")
				return
			}
			if err != nil {
				errChan <- fmt.Errorf("error receiving message: %w", err)
				return
			}

			receivedCount++

			correlationID := msg.GetCorrelationId()

			// –û–±—Ä–∞–±–æ—Ç–∫–∞ –≤—Ö–æ–¥—è—â–µ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è —á–µ—Ä–µ–∑ one-of
			switch content := msg.GetContent().(type) {
			case *notesv1.ChatMessage_TextMessage:
				// –ü–æ–ª—É—á–µ–Ω–æ —Ç–µ–∫—Å—Ç–æ–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ
				text := content.TextMessage.GetText()
				timestamp := content.TextMessage.GetTimestamp()

				// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ç–∏–ø —Å–æ–æ–±—â–µ–Ω–∏—è –ø–æ correlation_id
				if len(correlationID) > 0 && correlationID[:4] == "noti" {
					// –≠—Ç–æ —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞
					notificationCount++
					log.Printf("üì® Received notification #%d: correlation_id=%s, text=%s, timestamp=%v",
						notificationCount, correlationID, text, timestamp)
				} else if len(correlationID) > 0 && correlationID[:6] == "client" {
					// –≠—Ç–æ –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–µ–Ω–∏–µ –Ω–∞—à–µ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è
					acknowledgedCount++
					log.Printf("‚úÖ Received acknowledgment #%d: correlation_id=%s, text=%s, timestamp=%v",
						acknowledgedCount, correlationID, text, timestamp)
				} else {
					log.Printf("üì® Received text message: correlation_id=%s, text=%s, timestamp=%v",
						correlationID, text, timestamp)
				}

			case *notesv1.ChatMessage_Error:
				// –ü–æ–ª—É—á–µ–Ω–∞ –±–∏–∑–Ω–µ—Å–æ–≤–∞—è –æ—à–∏–±–∫–∞ –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞ (–Ω–µ —Ä–∞–∑—Ä—ã–≤–∞—é—â–∞—è —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ)
				errorMsg := content.Error
				log.Printf("‚ùå Received error: correlation_id=%s, code=%s, message=%s, details=%s",
					correlationID, errorMsg.GetCode(), errorMsg.GetMessage(), errorMsg.GetDetails())
				// –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ—à–∏–±–∫–∏ –±–µ–∑ —Ä–∞–∑—Ä—ã–≤–∞ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è - –ø—Ä–æ–¥–æ–ª–∂–∞–µ–º —Ä–∞–±–æ—Ç—É
				// –ú–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –ª–æ–≥–∏–∫—É –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∫–æ–Ω–∫—Ä–µ—Ç–Ω—ã—Ö —Ç–∏–ø–æ–≤ –æ—à–∏–±–æ–∫

			case nil:
				// Content –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω
				log.Printf("‚ö†Ô∏è Received message without content: correlation_id=%s", correlationID)
			}

			// –ü—Ä–æ–≤–µ—Ä–∫–∞ –æ—Ç–º–µ–Ω—ã –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞
			select {
			case <-chatCtx.Done():
				log.Println("Context cancelled in receive goroutine")
				return
			default:
			}
		}
	}()

	// –ì–æ—Ä—É—Ç–∏–Ω–∞ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏–π –Ω–∞ —Å–µ—Ä–≤–µ—Ä
	wg.Add(1)
	go func() {
		defer wg.Done()
		// –í–∫–ª—é—á–∞–µ–º –æ–¥–Ω–æ –ø—É—Å—Ç–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –≤–∞–ª–∏–¥–∞—Ü–∏–∏ –æ—à–∏–±–æ–∫
		messages := []string{"Hello", "How are you?", "", "Test message"}
		for i, text := range messages {
			correlationID := fmt.Sprintf("client-msg-%d", i+1)
			msg := &notesv1.ChatMessage{
				CorrelationId: correlationID,
				Content: &notesv1.ChatMessage_TextMessage{
					TextMessage: &notesv1.ChatTextMessage{
						Text:      text,
						Timestamp: timestamppb.Now(),
					},
				},
			}

			if err := stream.Send(msg); err != nil {
				errChan <- fmt.Errorf("error sending message: %w", err)
				return
			}

			sentCount++
			if text == "" {
				log.Printf("üì§ Sent message #%d: correlation_id=%s, text='' (empty - testing validation)",
					sentCount, correlationID)
			} else {
				log.Printf("üì§ Sent message #%d: correlation_id=%s, text=%s",
					sentCount, correlationID, text)
			}

			// –ó–∞–¥–µ—Ä–∂–∫–∞ –º–µ–∂–¥—É –æ—Ç–ø—Ä–∞–≤–∫–∞–º–∏
			time.Sleep(2 * time.Second)

			// –ü—Ä–æ–≤–µ—Ä–∫–∞ –æ—Ç–º–µ–Ω—ã –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞
			select {
			case <-chatCtx.Done():
				return
			default:
			}
		}

		// –î–∞–µ–º –≤—Ä–µ–º—è –Ω–∞ –ø–æ–ª—É—á–µ–Ω–∏–µ –æ—Ç–≤–µ—Ç–æ–≤
		log.Println("üì§ Finished sending all messages, waiting for responses...")
		time.Sleep(15 * time.Second)

		// –ó–∞–∫—Ä—ã–≤–∞–µ–º –æ—Ç–ø—Ä–∞–≤–∫—É
		if err := stream.CloseSend(); err != nil {
			errChan <- fmt.Errorf("error closing send stream: %w", err)
			return
		}
		log.Println("üì§ Closed client send stream")
	}()

	// –û–∂–∏–¥–∞–Ω–∏–µ –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è –≥–æ—Ä—É—Ç–∏–Ω
	go func() {
		wg.Wait()
		close(errChan)
	}()

	// –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ—à–∏–±–æ–∫
	if err, ok := <-errChan; ok {
		log.Printf("‚ùå Chat error: %v", err)
	} else {
		log.Println("\n=== Chat Statistics ===")
		log.Printf("Messages sent: %d", sentCount)
		log.Printf("Messages received: %d", receivedCount)
		log.Printf("Acknowledgments received: %d", acknowledgedCount)
		log.Printf("Notifications received: %d", notificationCount)
		log.Println("‚úÖ Chat completed successfully")
	}
}
